--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,7 @@
-version: '3.8'
-
 services:
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: vdb-prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-    volumes:
-      - ./prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
-    ports:
-      - "9090:9090"
-    networks:
-      - vector-monitor
-    restart: unless-stopped
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: vdb-grafana
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_SECURITY_ADMIN_USER=admin
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
-    networks:
-      - vector-monitor
-    restart: unless-stopped
-    depends_on:
-      - prometheus
-
-  vector-db-exporter:
-    build: ./exporters/vector-db
-    container_name: vdb-exporter
-    env_file:
-      - ./config/vector-db-config.env
-    ports:
-      - "9402:9402"
-    networks:
-      - vector-monitor
-    restart: unless-stopped
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    labels:
-      project: "vector-db-monitor"
-      component: "exporter"
-
-  # ChromaDB service
   chromadb:
     image: chromadb/chroma:latest
-    container_name: vdb-chromadb
+    container_name: chromadb
     ports:
       - "8000:8000"
     environment:
@@ -64,18 +11,54 @@ services:
     volumes:
       - chromadb_data:/chroma/data
     networks:
-      - vector-monitor
+      - vector-db-network
     restart: unless-stopped
     labels:
-      project: "vector-db-monitor"
-      component: "database"
-      db_type: "chromadb"
+      - "project=vector-db"
+      - "component=database"
+      - "db_type=chromadb"
+
+  # Qdrant vector database
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - qdrant_data:/qdrant/storage
+    networks:
+      - vector-db-network
+    restart: unless-stopped
+    labels:
+      - "project=vector-db"
+      - "component=database"
+      - "db_type=qdrant"
+
+  # Weaviate vector database
+  weaviate:
+    image: semitechnologies/weaviate:latest
+    container_name: weaviate
+    ports:
+      - "8081:8080"
+    environment:
+      QUERY_DEFAULTS_LIMIT: 25
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+    volumes:
+      - weaviate_data:/var/lib/weaviate
+    networks:
+      - vector-db-network
+    restart: unless-stopped
+    labels:
+      - "project=vector-db"
+      - "component=database"
+      - "db_type=weaviate"
 
 volumes:
-  prometheus_data:
-  grafana_data:
   chromadb_data:
+  qdrant_data:
+  weaviate_data:
 
 networks:
-  vector-monitor:
+  vector-db-network:
     driver: bridge
